--- a/login/templates/release_task_2.html
+++ b/login/templates/release_task_2.html
@@ -183,7 +183,7 @@ function setMember() {
     return '<div id="member" >' +
         '<div class="col-md-6" id="mem" style="margin-top:10px;margin-bottom:10px;">' +
         '    <div class="form-group">' +
-        '        <label for="id_m1" id="memb">成员' + (memberIndex+1) + ':</label>' +
+        '        <label for="id_m1" id="memb">成员' + '：</label>' +
 	'<div id="container" style="margin-top:10px;margin-bottom:10px;" >'+
 	'<div id="content">'+
 	'<div class="first">'+
@@ -428,7 +428,7 @@ function removeMember(t) {
 
                                 <div class="tab-pane" id="title" style="margin-bottom: 30px;">
                                     <div class="row">
-                                        <h5 class="info-text">设置题目</h5>
+                                        <h5 class="info-text">设置题目（请控制在15个字符内）</h5>
                                         <div class="col-sm-12">
                                         </div>
                                         <div class="col-sm-7 col-sm-offset-1">
@@ -502,7 +502,7 @@ function removeMember(t) {
                                                 <div id="member1">
                                                     <div class="col-md-6" id="mem1">
                                                         <div class="form-group">
-                                                            <label for="id_m1" id="memb1">成员1:</label>
+                                                            <label for="id_m1" id="memb1">成员：</label>
                                                             <input type="text" name="m1" class="form-control"
                                                                    maxlength="128"  id="id_m1"/>
                                                         </div>
