--- a/login/templates/all_task.html
+++ b/login/templates/all_task.html
@@ -553,7 +553,7 @@
                                             {% endif %}
 
                                             <td><span
-                                                    class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                    class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
                                             <td><span
                                                 class="label label-info">{{ task.credit }}</span>
@@ -645,7 +645,7 @@
                                             {% endif %}
 
                                             <td><span
-                                                    class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                    class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
                                                     <td><span
                                                 class="label label-info">{{ task.credit }}</span>
@@ -765,7 +765,7 @@
                                             {% endif %}
 
                                             <td><span
-                                                    class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                    class="label label-primary"> {{ task.max_tagged_num - task.num_worker}}/{{ task.max_tagged_num }} </span>
                                             </td>
 
                                                     <td><span
@@ -882,7 +882,7 @@
                                             {% endif %}
 
                                             <td><span
-                                                    class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                    class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
                                             <td><span
                                                 class="label label-info">{{ task.credit }}</span>
@@ -989,7 +989,7 @@
                                             {% else %}
                                                 <td><span class="label label-danger">已停止</span></td>
                                             {% endif %}
-                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
 
                                                     <td><span class="label label-info">{{ task.credit }}</span>
@@ -1087,7 +1087,7 @@
                                             {% else %}
                                                 <td><span class="label label-danger">已停止</span></td>
                                             {% endif %}
-                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
 
                                                     <td><span class="label label-info">{{ task.credit }}</span>
@@ -1178,7 +1178,7 @@
                                             {% else %}
                                                 <td><span class="label label-danger">已停止</span></td>
                                             {% endif %}
-                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
 
                                                     <td><span class="label label-info">{{ task.credit }}</span>
@@ -1271,7 +1271,7 @@
                                             {% else %}
                                                 <td><span class="label label-danger">已停止</span></td>
                                             {% endif %}
-                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.users.count() }}/{{ task.max_tagged_num }} </span>
+                                                        <td><span class="label label-primary"> {{ task.max_tagged_num - task.num_worker }}/{{ task.max_tagged_num }} </span>
                                             </td>
 
                                                     <td><span class="label label-info">{{ task.credit }}</span>
