--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -76,6 +76,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="用户名或邮箱"
+                android:maxHeight="150dp"
+                android:maxLength="100"
                 android:background="@drawable/input_border_view"
                 android:padding="10dp"
                 android:layout_margin="10dp"
@@ -85,6 +87,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="密码"
+                android:maxLength="30"
                 android:background="@drawable/input_border_view"
                 android:padding="10dp"
                 android:layout_margin="10dp"
@@ -129,7 +132,8 @@
                 android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="用户名"
+                android:hint="请输入1~30位用户名"
+                android:maxLength="30"
                 android:background="@drawable/input_border_view"
                 android:padding="10dp"
                 android:layout_margin="10dp"
@@ -138,7 +142,8 @@
                 android:id="@+id/pwd_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="密码"
+                android:hint="请输入1~30位密码"
+                android:maxLength="30"
                 android:background="@drawable/input_border_view"
                 android:padding="10dp"
                 android:layout_margin="10dp"
@@ -148,6 +153,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="确认密码"
+                android:maxLength="30"
                 android:background="@drawable/input_border_view"
                 android:padding="10dp"
                 android:layout_margin="10dp"
@@ -156,7 +162,9 @@
                 android:id="@+id/user_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxHeight="80dp"
                 android:hint="邮箱"
+                android:maxLength="100"
                 android:background="@drawable/input_border_view"
                 android:padding="10dp"
                 android:layout_margin="10dp"
