--- a/Android/app/src/main/res/layout/activity_questions.xml
+++ b/Android/app/src/main/res/layout/activity_questions.xml
@@ -30,11 +30,14 @@
             android:src ="@mipmap/back_icon"/>
         <TextView
             android:id="@+id/do_task_title"
+            android:maxWidth="270dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:maxLines="1"
             android:textSize="@dimen/top_menu_text_size"
-            android:textColor="@color/colorWhite"/>
+            android:textColor="@color/colorWhite"
+            android:ellipsize="end"/>
     </FrameLayout>
     <com.flyco.tablayout.SlidingTabLayout
         android:id="@+id/tab_4_subtasks"
