--- a/Android/app/src/main/res/layout/view_person_attribute.xml
+++ b/Android/app/src/main/res/layout/view_person_attribute.xml
@@ -13,14 +13,21 @@
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:textSize="14sp" />
-    <TextView
-        android:id="@+id/person_attribute_text"
+    <HorizontalScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/person_attribute_name"
         android:layout_alignParentRight="true"
         android:paddingRight="5dp"
-        android:textSize="14sp"
-        android:textColor="@color/qmui_config_color_75_pure_black"/>
+        android:layout_marginLeft="15dp">
+        <TextView
+            android:id="@+id/person_attribute_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_gravity="right"
+            android:textColor="@color/qmui_config_color_75_pure_black"/>
+    </HorizontalScrollView>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
